# Claude-Code-Notifier

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  README_en.md  REFACTOR_GUIDE.md  RELEASE_v0.0.6.md  demo.sh  install.sh  package.json  pyproject.toml  requirements.txt  setup.py  status.json  upgrade.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  sync-versions.yml  version-bump.yml
config/: enhanced_config.yaml.template
docs/: CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  advanced-usage.md  advanced_usage.md  ccusage-integration.md  channels.md  channels_en.md  configuration.md  contributing.md  deployment-guide.md  development-roadmap.md  development-roadmap_en.md  development.md  development_en.md  installation-solution.md  quickstart.md  quickstart_en.md
examples/: usage_examples.py
scripts/: quick_setup.py  test.sh  test_installation_system.py  unified_installer.py
src/: __version__.py  config_manager.py  enhanced_notifier.py  notifier.py
src/claude_notifier/: __init__.py  __version__.py
src/claude_notifier/cli/: main.py  uninstall.py  update.py
src/claude_notifier/cli/commands/: __init__.py  config.py  core.py  debug.py  hooks.py
src/claude_notifier/core/: config.py  notifier.py
src/claude_notifier/core/channels/: __init__.py
src/claude_notifier/events/: builtin.py  custom.py
src/claude_notifier/hooks/: claude_hook.py  installer.py
src/claude_notifier/intelligence/: coordinator.py
src/claude_notifier/managers/: __init__.py  event_manager.py
src/hooks/: claude_hook.py  install_hooks.sh
src/managers/: event_manager.py
src/templates/: manager.py
src/utils/: ccusage_integration.py
templates/: custom_templates.yaml
tests/: conftest.py  test_cli.py  test_comprehensive.py  test_events.py
